--- a/main_10.html
+++ b/main_10.html
@@ -93,72 +93,159 @@
     // ===== 데이터 구조 =====
     // tooltip 속성을 추가하여 각 단어마다 개별 설명 가능
     const passages = [
-      // 지문 1 (문장 3개)
+      // 지문 1 (수능 스타일 - 경제 지문)
       [
         { parts: [
-          { role: 'sub',  text: '나는', tooltip: '주어: 말하는 사람 자신을 가리킴' }, 
-          { role: 'obj', text: '아침을', tooltip: '목적어: 먹는 대상인 식사' }, 
-          { role: 'verb', text: '먹는다', tooltip: '서술어: 음식을 섭취하는 행위' }, 
+          { role: 'sub', text: '시장경제에서', tooltip: '주어: 수요와 공급 원리로 작동하는 경제 체제' },
+          { role: 'sub', text: '가격은', tooltip: '주어: 재화나 서비스의 교환 가치' },
+          { role: 'obj', text: '자원 배분의 핵심 기능을', tooltip: '목적어: 희소한 자원을 효율적으로 분배하는 중요한 역할' },
+          { role: 'verb', text: '수행한다', tooltip: '서술어: 특정한 기능이나 역할을 실행하는 행위' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'sub',  text: '친구는', tooltip: '주어: 행동을 하는 사람' }, 
-          { role: 'obj', text: '자전거를', tooltip: '목적어: 타는 대상인 탈것' }, 
-          { role: 'verb', text: '탄다', tooltip: '서술어: 탈것에 올라타는 동작' }, 
+          { role: 'sub', text: '수요와 공급의 원리는', tooltip: '주어: 경제학의 가장 기본적인 메커니즘' },
+          { role: 'obj', text: '시장 가격의 결정 과정을', tooltip: '목적어: 가격이 어떻게 형성되는지에 대한 과정' },
+          { role: 'verb', text: '설명한다', tooltip: '서술어: 어떤 현상이나 개념을 이해할 수 있게 풀어내는 행위' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'sub',  text: '우리는', tooltip: '주어: 여러 사람을 포함하는 복수 주어' }, 
-          { role: 'obj', text: '학교에', tooltip: '목적어: 가는 목적지' }, 
-          { role: 'verb', text: '간다', tooltip: '서술어: 이동하는 행위' }, 
+          { role: 'text', text: '일반적으로' },
+          { role: 'sub', text: '수요가', tooltip: '주어: 소비자가 특정 가격에서 구매하고자 하는 수량' },
+          { role: 'verb', text: '증가하면', tooltip: '서술어: 양이나 정도가 많아지는 조건' },
+          { role: 'sub', text: '가격은', tooltip: '주어: 재화의 교환 비율' },
+          { role: 'verb', text: '상승하고', tooltip: '서술어: 수치나 수준이 높아지는 현상' },
+          { role: 'text', text: ',' },
+          { role: 'sub', text: '공급이', tooltip: '주어: 생산자가 특정 가격에서 판매하고자 하는 수량' },
+          { role: 'verb', text: '증가하면', tooltip: '서술어: 양이 늘어나는 상황' },
+          { role: 'sub', text: '가격은', tooltip: '주어: 시장에서 형성되는 교환 가치' },
+          { role: 'verb', text: '하락한다', tooltip: '서술어: 수치나 가치가 낮아지는 현상' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'text', text: '이러한' },
+          { role: 'sub', text: '가격 메커니즘은', tooltip: '주어: 시장에서 가격이 조정되는 자동적 체계' },
+          { role: 'obj', text: '시장의 효율성을', tooltip: '목적어: 자원이 낭비 없이 최적으로 배분되는 정도' },
+          { role: 'verb', text: '보장하는', tooltip: '서술어: 어떤 것이 확실히 이루어지도록 하는 행위' },
+          { role: 'obj', text: '중요한 역할을', tooltip: '목적어: 핵심적이고 본질적인 기능' },
+          { role: 'verb', text: '담당한다', tooltip: '서술어: 특정한 임무나 책임을 맡아서 수행하는 행위' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'text', text: '그러나' },
+          { role: 'sub', text: '시장 실패가', tooltip: '주어: 시장 메커니즘이 제대로 작동하지 못하는 상황' },
+          { role: 'verb', text: '발생하면', tooltip: '서술어: 어떤 사건이나 현상이 일어나는 조건' },
+          { role: 'sub', text: '정부의 개입이', tooltip: '주어: 국가가 경제 활동에 관여하는 행위' },
+          { role: 'verb', text: '필요하다', tooltip: '서술어: 어떤 것이 꼭 있어야 하거나 요구되는 상태' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'sub', text: '외부효과나', tooltip: '주어: 시장 거래가 제3자에게 미치는 의도하지 않은 영향' },
+          { role: 'sub', text: '공공재의 존재는', tooltip: '주어: 비배제성과 비경합성을 가진 재화' },
+          { role: 'obj', text: '시장 실패의 대표적 사례를', tooltip: '목적어: 시장이 비효율적으로 작동하는 전형적인 경우' },
+          { role: 'verb', text: '보여준다', tooltip: '서술어: 구체적인 예시로 증명하거나 드러내는 행위' },
           { role: 'text', text: '.' }
         ]}
       ],
-      // 지문 2 (문장 4개)
+      // 지문 2 (수능 스타일 - 철학 지문)
       [
         { parts: [
-          { role: 'sub',  text: '고양이는', tooltip: '주어: 동물 이름' }, 
-          { role: 'obj', text: '햇살을', tooltip: '목적어: 쬐는 대상' }, 
-          { role: 'verb', text: '쬔다', tooltip: '서술어: 빛을 받는 행위' }, 
+          { role: 'sub', text: '칸트는', tooltip: '주어: 18세기 독일의 철학자 이마누엘 칸트' },
+          { role: 'text', text: '인간의 인식이' },
+          { role: 'text', text: '경험에서' },
+          { role: 'verb', text: '시작하지만', tooltip: '서술어: 어떤 것이 출발점이 되는 양보 조건' },
+          { role: 'text', text: '모든 인식이' },
+          { role: 'text', text: '경험에서만' },
+          { role: 'verb', text: '생기는', tooltip: '서술어: 어떤 것이 만들어지거나 발생하는 행위' },
+          { role: 'text', text: '것은' },
+          { role: 'verb', text: '아니라고', tooltip: '서술어: 부정을 나타내는 서술' },
+          { role: 'verb', text: '주장했다', tooltip: '서술어: 자신의 견해를 강하게 내세운 행위 (과거형)' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'sub', text: '너는', tooltip: '주어: 듣는 사람을 가리킴' }, 
-          { role: 'obj', text: '문제를', tooltip: '목적어: 풀어야 할 과제' }, 
-          { role: 'verb', text: '푼다', tooltip: '서술어: 해답을 찾는 행위' }, 
+          { role: 'sub', text: '그는', tooltip: '주어: 앞서 언급된 칸트를 가리키는 대명사' },
+          { role: 'obj', text: '인간의 인식 능력을', tooltip: '목적어: 사물을 파악하고 이해하는 정신적 기능' },
+          { role: 'obj', text: '감성과 오성으로', tooltip: '목적어: 각각 직관과 개념을 다루는 인식의 두 영역' },
+          { role: 'verb', text: '구분했다', tooltip: '서술어: 서로 다른 것으로 나누어 분류한 행위 (과거형)' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'text', text: '그리고' }, 
-          { role: 'obj', text: '정답을', tooltip: '목적어: 확인할 대상' }, 
-          { role: 'verb', text: '확인한다', tooltip: '서술어: 맞는지 살펴보는 행위' }, 
+          { role: 'sub', text: '감성은', tooltip: '주어: 외부 대상을 직접 받아들이는 직관적 인식 능력' },
+          { role: 'obj', text: '대상을', tooltip: '목적어: 인식의 대상이 되는 사물이나 현상' },
+          { role: 'text', text: '시간과 공간의 형식으로' },
+          { role: 'verb', text: '받아들이고', tooltip: '서술어: 외부의 것을 안으로 수용하는 행위' },
+          { role: 'text', text: ',' },
+          { role: 'sub', text: '오성은', tooltip: '주어: 개념을 통해 사유하는 이성적 인식 능력' },
+          { role: 'obj', text: '감성이 제공한 직관을', tooltip: '목적어: 감각을 통해 얻어진 즉각적 인식 내용' },
+          { role: 'obj', text: '개념으로', tooltip: '목적어: 사물의 본질을 추상화한 사유 형식' },
+          { role: 'verb', text: '종합한다', tooltip: '서술어: 여러 요소를 하나로 통합하는 사유 작용' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'text', text: '오늘은' }, 
-          { role: 'obj', text: '도서관에서', tooltip: '목적어: 공부하는 장소' }, 
-          { role: 'verb', text: '공부한다', tooltip: '서술어: 학습하는 행위' }, 
+          { role: 'text', text: '이처럼' },
+          { role: 'sub', text: '칸트의 인식론은', tooltip: '주어: 칸트가 제시한 지식의 기원과 한계에 대한 이론' },
+          { role: 'obj', text: '경험론과 합리론의 대립을', tooltip: '목적어: 경험과 이성 중 무엇이 우선인가에 대한 철학적 논쟁' },
+          { role: 'verb', text: '극복하려는', tooltip: '서술어: 문제나 한계를 넘어서고자 하는 시도' },
+          { role: 'obj', text: '시도였다', tooltip: '목적어: 새로운 해결책을 제시하려는 노력' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'sub', text: '그의 이론은', tooltip: '주어: 칸트가 구축한 철학 체계' },
+          { role: 'text', text: '인간의 인식에' },
+          { role: 'obj', text: '선험적 형식이', tooltip: '목적어: 경험 이전에 미리 갖추어진 인식의 틀' },
+          { role: 'verb', text: '존재한다는', tooltip: '서술어: 어떤 것이 실재로 있다는 것을 나타냄' },
+          { role: 'obj', text: '혁명적 사고를', tooltip: '목적어: 기존 관점을 근본적으로 전환시킨 사유' },
+          { role: 'verb', text: '제시했다', tooltip: '서술어: 새로운 생각이나 방안을 내놓은 행위 (과거형)' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'text', text: '결국' },
+          { role: 'sub', text: '우리가', tooltip: '주어: 인식 주체로서의 인간 일반' },
+          { role: 'verb', text: '경험하는', tooltip: '서술어: 직접 겪거나 느끼는 행위' },
+          { role: 'obj', text: '세계는', tooltip: '목적어: 우리가 인식하는 현상의 총체' },
+          { role: 'text', text: '사물 자체가 아니라' },
+          { role: 'sub', text: '우리의 인식 형식에 의해', tooltip: '주어: 선험적으로 주어진 시공간과 범주' },
+          { role: 'verb', text: '구성된', tooltip: '서술어: 만들어지고 형성된' },
+          { role: 'obj', text: '현상일', tooltip: '목적어: 인식 주체에게 나타나는 대상의 모습' },
+          { role: 'text', text: '뿐이다' },
           { role: 'text', text: '.' }
         ]}
       ],
-      // 지문 3 (문장 3개)
+      // 지문 3 (수능 스타일 - 과학 지문)
       [
         { parts: [
-          { role: 'sub', text: '연구팀은', tooltip: '주어: 연구를 수행하는 집단' }, 
-          { role: 'obj', text: '데이터를', tooltip: '목적어: 수집하는 대상인 자료' }, 
-          { role: 'verb', text: '수집했다', tooltip: '서술어: 모으는 행위 (과거형)' }, 
+          { role: 'sub', text: '빛은', tooltip: '주어: 전자기파의 일종으로 시각을 일으키는 물리적 실체' },
+          { role: 'text', text: '파동의 성질과 입자의 성질을' },
+          { role: 'text', text: '동시에' },
+          { role: 'verb', text: '가진다', tooltip: '서술어: 특정한 성질을 소유하고 있음을 나타냄' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'sub', text: '분석가는', tooltip: '주어: 분석 업무를 하는 사람' }, 
-          { role: 'obj', text: '결과를', tooltip: '목적어: 정리할 대상' }, 
-          { role: 'verb', text: '정리했다', tooltip: '서술어: 체계적으로 배열하는 행위 (과거형)' }, 
+          { role: 'text', text: '이를' },
+          { role: 'obj', text: '빛의 이중성이라고', tooltip: '목적어: 빛이 가진 두 가지 상반된 성질을 지칭하는 개념' },
+          { role: 'verb', text: '부른다', tooltip: '서술어: 특정 명칭으로 지칭하는 행위' },
           { role: 'text', text: '.' }
         ]},
         { parts: [
-          { role: 'text', text: '분석가는' }, 
-          { role: 'obj', text: '결과를' }, 
-          { role: 'verb', text: '정리했다' }, 
+          { role: 'sub', text: '아인슈타인은', tooltip: '주어: 20세기 물리학자로 광전효과를 설명한 인물' },
+          { role: 'obj', text: '광전효과를', tooltip: '목적어: 빛이 금속 표면에 부딪혀 전자를 방출하는 현상' },
+          { role: 'text', text: '통해' },
+          { role: 'obj', text: '빛의 입자성을', tooltip: '목적어: 빛이 입자(광자)로 존재한다는 성질' },
+          { role: 'verb', text: '증명했다', tooltip: '서술어: 과학적 방법으로 사실임을 밝힌 행위 (과거형)' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'text', text: '반면' },
+          { role: 'sub', text: '영의 이중 슬릿 실험은', tooltip: '주어: 토마스 영이 수행한 빛의 간섭 실험' },
+          { role: 'obj', text: '빛의 파동성을', tooltip: '목적어: 빛이 파동으로 전파되는 성질' },
+          { role: 'verb', text: '보여준다', tooltip: '서술어: 어떤 사실을 드러내거나 입증하는 행위' },
+          { role: 'text', text: '.' }
+        ]},
+        { parts: [
+          { role: 'text', text: '이처럼' },
+          { role: 'sub', text: '빛의 본질은', tooltip: '주어: 빛이 가진 근본적인 특성' },
+          { role: 'text', text: '관찰 방법에 따라' },
+          { role: 'text', text: '다르게' },
+          { role: 'verb', text: '나타난다', tooltip: '서술어: 어떤 모습이나 현상이 드러나는 행위' },
           { role: 'text', text: '.' }
         ]}
       ]
