--- a/main_10.html
+++ b/main_10.html
@@ -18,6 +18,9 @@
     #output {
       padding: 16px; border-radius: 12px; background: #f8fafc; font-size: 1.15rem;
       min-height: 80px;
+
+      margin-left: 120px;
+      width: calc(100% - 32px);
     }
     .para { display: flex; flex-direction: column; gap: 10px; }
     .sent { display: inline; }
